# witnesscalc_adapter

./: Cargo.toml  README.MD  README.md  build.rs  clone_witnesscalc.sh
.github/workflows/: build-and-test.yml  release.yml
src/: lib.rs
testdata/: authV2_input_wrong.json
tests/: Cargo.toml  build.rs
tests/src/: lib.rs
tests/testdata/: multiplier2.circom  multiplier2_input.json  rsa_main.cpp  rsa_main.json  sha256.cpp
witnesscalc_adapter/: Cargo.toml  README.MD  README.md  clone_witnesscalc.sh
witnesscalc_adapter/src/: adapter.rs  convert_type.rs  convert_witness.rs  lib.rs
